testsuite/tests/explicit-dicts/should_compile/NoMethods.hs
module NoMethods where

class C a

intInstance :: C.Dict Int
intInstance = C.Dict
