testsuite/tests/explicit-dicts/should_fail/SomeClass.hs
module SomeClass where

class SomeClass a where
  someMethod :: a -> a
